product_docs/docs/edb-postgres-ai/1.3/hybrid-manager/using_hybrid_manager/managing_users/index.mdx
---
title: Managing users in Hybrid Manager
navTitle: Managing users
description: Learn how to manage users for Hybrid Manager.
navigation: 
- native_users
- user_roles
- byo_idp
- apply_dex_config
---

Hybrid Manager (HM) uses [Dex](https://dexidp.io/docs/) for user authentication in the HM console, acting as a proxy between HM and any native users or external user management systems (identity providers or IdPs) like LDAP and SAML. 

During the initial bootstrapping of HM, an administrator sets up a native superuser for HM console access. Use this native superuser to sign in to the console for the first time.

For testing or demo environments, you can simplify operations by adding more native users as needed. 

- See [Creating native users](native_users/create_native_user) for more information.

For assigning system roles to different users, HM uses a role-based access control (RBAC) model.

- See [User roles and authorization](user_roles_authz) for more information.

For production deployments, we strongly recommend configuring an external IdP like LDAP, SAML, or another [supported connector](https://dexidp.io/docs/connectors/). This ensures robust and secure user management. This needs to be done at install time. After configuring your chosen IdP and adding new administrators for the organization, disable the native user login.

- See [Configuring an IdP](product_docs/docs/edb-postgres-ai/1.3/hybrid-manager/install/customization/byo_idp/index.mdx) for more information. 
