product_docs/docs/edb-postgres-ai/1.4/hybrid-manager/using_hybrid_manager/managing_users/index.mdx
---
title: Managing users in Hybrid Manager
navTitle: Managing users
description: Learn how to manage users for Hybrid Manager.
navigation:
  - native_users
  - user_roles
  - manage_authentication_policy
---

Hybrid Manager (HM) supports authentication for the HM console using either native users or external identity providers (IdPs) such as LDAP, SAML, or OIDC.

During the initial bootstrapping of HM, an administrator sets up a native superuser for HM console access. Use this native superuser to sign in to the console for the first time.

For testing or demo environments, you can simplify operations by adding more native users as needed.

- See [Creating native users](native_users/create_native_user) for more information.

For assigning system roles to different users, HM uses a role-based access control (RBAC) model.

- See [User roles and authorization](user_roles_authz) for more information.

For production deployments, we strongly recommend configuring an external IdP like LDAP, SAML, OIDC, or another [supported connector](https://dexidp.io/docs/connectors/). This ensures robust and secure user management. Configure your IdP at install time. After configuring your chosen IdP and adding new administrators for the organization, disable the native user login.

- See [Configuring an IdP](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/idp_management/config_idp_hm/) for more information.

To enforce security and governance requirements across your organization, HM lets organization owners configure authentication policy settings such as access key lifetimes, web session durations, and the maximum number of machine users and access keys.

- See [Managing authentication policy](manage_authentication_policy) for more information.
